--- a/paper/joaquin-dr17.tex
+++ b/paper/joaquin-dr17.tex
@@ -184,11 +184,7 @@ Combined-spectrum LSF information.
 
 \ESA{} \Gaia{} data release, archive query, and cross matches.
 
-Full contents of the rectangular feature matrix $X$.
-
-\section{Spectral neighborhoods}
-
-How do we find 
+Removal of obv outliers?
 
 \section{Spectral neighborhoods}
 
@@ -199,6 +195,12 @@ How to define the larger neighborhood? K nearest neighbors to each control point
 How to choose which neighborhood assigns the distance? Nearest center? Note that each star has only one neighborhood from which it gets assigned a distance.
 
 We need consistent terminology.
+
+\section{Data patching, filtering, and munging}
+
+How do we find 
+
+Full contents of the rectangular feature matrix $X$.
 
 \section{Distance estimation}
 
