--- a/notebooks/PCA-neighbors.ipynb
+++ b/notebooks/PCA-neighbors.ipynb
@@ -223,8 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(cache_path / 'pca_neighborizer.npy', \n",
-    "        np.vstack((pca.mean_, pca.components_)))"
+    "import pickle\n",
+    "\n",
+    "with open(cache_path / 'pca_neighborizer.pkl', 'wb') as f:\n",
+    "    pickle.dump(pca, f)"
    ]
   },
   {
