improve cleaning of the parent sample

--- a/notebooks/Parent-sample-cleaning.ipynb
+++ b/notebooks/Parent-sample-cleaning.ipynb
@@ -55,9 +55,8 @@
     "\n",
     "from gala.mpl_style import hesperia, laguna\n",
     "\n",
-    "from joaquin.data_helpers import get_parent_sample, phot_to_label\n",
     "from joaquin.config import phot_names, dr\n",
-    "from joaquin.plot import simple_corner"
+    "from joaquin.plot import simple_corner, phot_to_label"
    ]
   },
   {
@@ -76,8 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binaries = at.Table.read(\n",
-    "    '/mnt/home/apricewhelan/projects/apogee-dr16-vac/catalogs/lnK-0.2_logL3.0_metadata.fits')"
+    "# binaries = at.Table.read(\n",
+    "#     '/mnt/home/apricewhelan/projects/apogee-dr16-vac/catalogs/lnK-0.2_logL3.0_metadata.fits')"
    ]
   },
   {
@@ -119,7 +118,7 @@
    "outputs": [],
    "source": [
     "allstar['TELESCOPE'] = np.array([x.strip() for x in allstar['TELESCOPE']])\n",
-    "stars = allstar\n",
+    "stars = allstar[np.isin(allstar['TELESCOPE'], ['apo25m', 'lco25m'])]\n",
     "len(stars)"
    ]
   },
@@ -129,18 +128,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for band in 'JHK':\n",
-    "    print(np.percentile(stars[f'{band}_ERR'][phot_mask], [1, 99.9]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phot_mask = np.isin(stars['TELESCOPE'], ['apo25m', 'lco25m'])\n",
-    "\n",
     "phot_mask = np.ones(len(stars), dtype=bool)\n",
     "for name in phot_names:\n",
     "    phot_mask &= (np.isfinite(stars[name]) & \n",
@@ -165,6 +152,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for band in 'JHK':\n",
+    "    print(np.percentile(stars[f'{band}_ERR'][phot_mask], [1, 99.9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# binaries_mask = ~np.isin(stars['APOGEE_ID'], binaries['APOGEE_ID'])"
    ]
   },
@@ -174,8 +171,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bits = np.array([\n",
+    "    0,  # BAD_PIXELS,\n",
+    "    1,  # COMMISSIONING\n",
+    "    3,  # VERY_BRIGHT_NEIGHBOR\n",
+    "    4,  # LOW_SNR\n",
+    "])\n",
+    "starflag_mask = (stars['STARFLAG'] & np.sum(2**bits)) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# TODO: mask binaries?\n",
-    "clean_stars = stars[phot_mask]  # & binaries_mask\n",
+    "clean_stars = stars[phot_mask & starflag_mask]  # & binaries_mask\n",
     "len(stars), len(clean_stars)"
    ]
   },
