--- a/notebooks/PCA-neighbors-apply.ipynb
+++ b/notebooks/PCA-neighbors-apply.ipynb
@@ -31,12 +31,10 @@
     "from sklearn.neighbors import KernelDensity\n",
     "from scipy.spatial import cKDTree\n",
     "\n",
-    "from joaquin.design_matrix import JoaquinData\n",
+    "from joaquin.data import JoaquinData, make_Xy\n",
     "from joaquin.config import dr\n",
     "from joaquin.logger import logger\n",
-    "from joaquin.plot import simple_corner\n",
-    "\n",
-    "from gala.mpl_style import hesperia, laguna"
+    "from joaquin.plot import simple_corner"
    ]
   },
   {
@@ -96,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, star_mask = JoaquinData.from_stars(\n",
-    "    parent_stars, cache_path=cache_path, \n",
-    "    lowpass=False)"
+    "data = JoaquinData(parent_stars, \n",
+    "                   cache_path=cache_path, \n",
+    "                   lowpass=False)"
    ]
   },
   {
@@ -107,12 +105,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, *_ = data.get_sub_Xy('spec')\n",
+    "(X, *_), idx_map = data.get_Xy(['spec'], \n",
+    "                               spec_mask_thresh=1)\n",
     "\n",
-    "good_mask = np.all(np.isfinite(X), axis=1)\n",
-    "X = X[good_mask]\n",
-    "good_stars = parent_stars[good_mask]\n",
-    "X.shape"
+    "# See cell in PCA-neighbors-training.ipynb\n",
+    "color_names = [\n",
+    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'J'),\n",
+    "    ('J', 'K'),\n",
+    "    ('J', 'w1mpro'),\n",
+    "    ('H', 'w2mpro'),\n",
+    "    ('w1mpro', 'w2mpro')\n",
+    "]\n",
+    "color_X = data.get_colors(color_names)\n",
+    "color_labels = [f'{x1}-{x2}' for x1, x2 in color_names]\n",
+    "X = np.hstack((X, color_X))\n",
+    "\n",
+    "good_stars = data.stars[data.stars_mask]\n",
+    "assert X.shape[0] == len(good_stars)"
    ]
   },
   {
@@ -318,6 +327,72 @@
     "    ax.set_ylabel('$M_H$')\n",
     "\n",
     "    fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate a feature matrix for the entire parent sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xyivar, idx_map, spec_mask_vals = make_Xy(parent, lowpass=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(cache_path / f'parent-sample-data.hdf5', 'w') as f:\n",
+    "    f.create_dataset('X', data=Xyivar[0])\n",
+    "    f.create_dataset('y', data=Xyivar[1])\n",
+    "    f.create_dataset('y_ivar', data=Xyivar[2])\n",
+    "    f.create_dataset('spec_mask_vals', data=spec_mask_vals)\n",
+    "    \n",
+    "    g = f.create_group('idx_map')\n",
+    "    for key, idx in idx_map.items():\n",
+    "        g.create_dataset(key, data=idx)\n",
+    "        \n",
+    "    parent.write(f, path='stars', serialize_meta=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File('/tmp/test.hdf5', 'w') as f:\n",
+    "    # parent.write(f, path='stars', serialize_meta=False)\n",
+    "    f.attrs['all_phot_names'] = ['GAIAEDR3_PHOT_G_MEAN_MAG', 'J',' w1mpro']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File('/tmp/test.hdf5', 'r') as f:\n",
+    "    # parent.write(f, path='stars', serialize_meta=False)\n",
+    "    print(f.attrs['all_phot_names'])"
    ]
   },
   {
