--- a/notebooks/PCA-neighbors-training.ipynb
+++ b/notebooks/PCA-neighbors-training.ipynb
@@ -10,6 +10,7 @@
     "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=Warning) \n",
+    "import pickle\n",
     "\n",
     "import sys\n",
     "import pathlib\n",
@@ -28,14 +29,13 @@
     "import numpy as np\n",
     "from tqdm.auto import tqdm\n",
     "from sklearn.decomposition import IncrementalPCA\n",
+    "from scipy.spatial import cKDTree\n",
     "\n",
     "from joaquin import Joaquin\n",
-    "from joaquin.design_matrix import JoaquinData\n",
-    "from joaquin.config import phot_names, dr, Kfold_K\n",
+    "from joaquin.data import JoaquinData\n",
+    "from joaquin.config import all_phot_names, dr\n",
     "from joaquin.logger import logger\n",
-    "from joaquin.plot import simple_corner, phot_to_label\n",
-    "\n",
-    "from gala.mpl_style import hesperia, laguna"
+    "from joaquin.plot import simple_corner, phot_to_label"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "source": [
     "parent = at.Table.read(cache_path / 'parent-sample.fits')\n",
     "\n",
-    "parent_stars = parent[parent['SNR'] > 100]\n",
+    "parent_stars = parent[(parent['SNR'] > 100)]\n",
     "\n",
     "# HACK: subselect for speed\n",
     "np.random.seed(42)\n",
@@ -97,8 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, star_mask = JoaquinData.from_stars(\n",
-    "    parent_stars, lowpass=False)"
+    "data = JoaquinData(parent_stars, lowpass=False, \n",
+    "                   cache_path=cache_path)"
    ]
   },
   {
@@ -107,12 +107,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, *_ = data.get_sub_Xy('spec')\n",
+    "(X, *_), idx_map = data.get_Xy(['spec'], \n",
+    "                               spec_mask_thresh=1)\n",
     "\n",
-    "good_mask = np.all(np.isfinite(X), axis=1)\n",
-    "X = X[good_mask]\n",
-    "good_stars = parent_stars[good_mask]\n",
-    "X.shape"
+    "# HACK: replace mags with colors\n",
+    "# X = np.hstack((X[:, idx_map['spec']],\n",
+    "#                X[:, idx_map['phot'][:-1]] - X[:, idx_map['phot'][1:]]))\n",
+    "# X = X[:, idx_map['phot'][:-1]] - X[:, idx_map['phot'][1:]]\n",
+    "\n",
+    "color_names = [\n",
+    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'J'),\n",
+    "    ('J', 'K'),\n",
+    "    ('J', 'w1mpro'),\n",
+    "    ('H', 'w2mpro'),\n",
+    "    ('w1mpro', 'w2mpro')\n",
+    "]\n",
+    "color_X = data.get_colors(color_names)\n",
+    "color_labels = [f'{x1}-{x2}' for x1, x2 in color_names]\n",
+    "X = np.hstack((X, color_X))\n",
+    "\n",
+    "good_stars = data.stars[data.stars_mask]\n",
+    "assert X.shape[0] == len(good_stars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# _ = simple_corner(color_X, labels=color_labels, \n",
+    "#                   color_by=good_stars['LOGG'], vmin=0.5, vmax=5.5)"
    ]
   },
   {
@@ -223,8 +248,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
     "with open(cache_path / 'pca_neighborizer.pkl', 'wb') as f:\n",
     "    pickle.dump(pca, f)"
    ]
@@ -236,15 +259,6 @@
     "---\n",
     "\n",
     "## Validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.spatial import cKDTree"
    ]
   },
   {
@@ -297,6 +311,9 @@
     "    ax.set_ylim(5.5, 0)\n",
     "    ax.set_xlim(7500, 3000)\n",
     "    \n",
+    "    ax.set_xlabel(r'ASPCAP $T_{\\rm EFF}$')\n",
+    "    ax.set_ylabel(r'ASPCAP $\\log g$')\n",
+    "    \n",
     "    # ---\n",
     "    \n",
     "    ax = axes[1]\n",
@@ -325,6 +342,9 @@
     "\n",
     "    ax.set_xlim(bins[0].min(), bins[0].max())\n",
     "    ax.set_ylim(bins[1].max(), bins[1].min())\n",
+    "    \n",
+    "    ax.set_xlabel(r'$G - J$')\n",
+    "    ax.set_ylabel(r'$M_G$')\n",
     "\n",
     "    fig.tight_layout()"
    ]
@@ -361,6 +381,9 @@
     "    ax.set_ylim(5.5, 0)\n",
     "    ax.set_xlim(7500, 3000)\n",
     "    \n",
+    "    ax.set_xlabel(r'ASPCAP $T_{\\rm EFF}$')\n",
+    "    ax.set_ylabel(r'ASPCAP $\\log g$')\n",
+    "    \n",
     "    # ---\n",
     "    \n",
     "    ax = axes[1]\n",
@@ -389,6 +412,9 @@
     "\n",
     "    ax.set_xlim(bins[0].min(), bins[0].max())\n",
     "    ax.set_ylim(bins[1].max(), bins[1].min())\n",
+    "    \n",
+    "    ax.set_xlabel(r'$G - J$')\n",
+    "    ax.set_ylabel(r'$M_G$')\n",
     "\n",
     "    fig.tight_layout()"
    ]
