--- a/notebooks/PCA-neighbors-apply.ipynb
+++ b/notebooks/PCA-neighbors-apply.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
+    "os.environ['JOAQUIN_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/projects/joaquin/cache\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=Warning) \n",
     "import pickle\n",
@@ -31,10 +32,17 @@
     "from sklearn.neighbors import KernelDensity\n",
     "from scipy.spatial import cKDTree\n",
     "\n",
-    "from joaquin.data import JoaquinData, make_Xy\n",
-    "from joaquin.config import dr\n",
-    "from joaquin.logger import logger\n",
-    "from joaquin.plot import simple_corner"
+    "from joaquin.data import JoaquinData\n",
+    "from joaquin.config import root_cache_path\n",
+    "from joaquin.plot import simple_corner\n",
+    "from joaquin.neighborhoods import get_neighborhood_X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See: `PCA-neighbord-training.ipynb`"
    ]
   },
   {
@@ -43,24 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
-    "cache_path.mkdir(exist_ok=True, parents=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent = at.Table.read(cache_path / 'parent-sample.fits')\n",
-    "\n",
-    "# HACK: subselect for speed\n",
-    "np.random.seed(42)\n",
-    "_idx = np.random.choice(len(parent), size=8192, replace=False)\n",
-    "parent_stars = parent[_idx]\n",
-    "\n",
-    "len(parent_stars)"
+    "parent_data = JoaquinData(cache_file='parent-sample')\n",
+    "neighbor_data = JoaquinData(cache_file='neighborhood-sample')\n",
+    "spec_good_mask = np.load(root_cache_path / 'spec_good_mask.npy')"
    ]
   },
   {
@@ -73,12 +66,13 @@
     "\n",
     "bins = (np.linspace(3000, 7500, 128),\n",
     "        np.linspace(0, 5.5, 128))\n",
-    "ax.hist2d(parent['TEFF'], parent['LOGG'],\n",
+    "ax.hist2d(parent_data.stars['TEFF'], \n",
+    "          parent_data.stars['LOGG'],\n",
     "          bins=bins, norm=mpl.colors.LogNorm(),\n",
     "          cmap='magma_r')\n",
     "\n",
-    "ax.plot(parent_stars['TEFF'],\n",
-    "        parent_stars['LOGG'],\n",
+    "ax.plot(neighbor_data.stars['TEFF'],\n",
+    "        neighbor_data.stars['LOGG'],\n",
     "        ls='none', marker='o', mew=0, ms=3., \n",
     "        color='tab:blue', alpha=0.75)\n",
     "\n",
@@ -94,9 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = JoaquinData(parent_stars, \n",
-    "                   cache_path=cache_path, \n",
-    "                   lowpass=False)"
+    "neighbor_X, color_labels, neighbor_stars = get_neighborhood_X(neighbor_data, spec_good_mask)"
    ]
   },
   {
@@ -105,32 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(X, *_), idx_map = data.get_Xy(['spec'], \n",
-    "                               spec_mask_thresh=1)\n",
-    "\n",
-    "# See cell in PCA-neighbors-training.ipynb\n",
-    "color_names = [\n",
-    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'J'),\n",
-    "    ('J', 'K'),\n",
-    "    ('J', 'w1mpro'),\n",
-    "    ('H', 'w2mpro'),\n",
-    "    ('w1mpro', 'w2mpro')\n",
-    "]\n",
-    "color_X = data.get_colors(color_names)\n",
-    "color_labels = [f'{x1}-{x2}' for x1, x2 in color_names]\n",
-    "X = np.hstack((X, color_X))\n",
-    "\n",
-    "good_stars = data.stars[data.stars_mask]\n",
-    "assert X.shape[0] == len(good_stars)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(cache_path / 'pca_neighborizer.pkl', 'rb') as f:\n",
+    "with open(root_cache_path / 'pca_neighborizer.pkl', 'rb') as f:\n",
     "    pca = pickle.load(f)"
    ]
   },
@@ -140,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projected_X = pca.transform(X)\n",
+    "projected_X = pca.transform(neighbor_X)\n",
     "projected_X /= pca.singular_values_"
    ]
   },
@@ -233,7 +200,7 @@
     "#     neighborhoods.append(np.concatenate(([i1], results)))\n",
     "\n",
     "# MAGIC NUMBERs\n",
-    "target_neighborhood_size = 1024\n",
+    "target_neighborhood_size = 256\n",
     "\n",
     "# sort_idx = dists.argsort()\n",
     "sort_idx = dens.argsort()[::-1]\n",
@@ -256,6 +223,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "zones_X = np.array([\n",
+    "    projected_X[idx[0]] \n",
+    "    for idx in neighborhoods])\n",
+    "# zones_X = np.array([\n",
+    "#     np.mean(projected_X[idx], axis=0) \n",
+    "#     for idx in neighborhoods])\n",
+    "\n",
+    "np.save(root_cache_path / 'neighborhoods_projected_X.npy', \n",
+    "        zones_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derp_TEFF = np.zeros(len(neighborhoods))\n",
+    "derp_LOGG = np.zeros(len(neighborhoods))\n",
+    "\n",
+    "for i, idx in enumerate(neighborhoods):\n",
+    "    teffs = neighbor_data.stars['TEFF'][idx]\n",
+    "    loggs = neighbor_data.stars['LOGG'][idx]\n",
+    "\n",
+    "#     derp_TEFF[i] = np.median(teffs[teffs > 0])\n",
+    "#     derp_LOGG[i] = np.median(loggs[loggs > -1])\n",
+    "\n",
+    "    derp_TEFF[i] = teffs[0]\n",
+    "    derp_LOGG[i] = loggs[0]\n",
+    "    \n",
+    "plt.scatter(derp_TEFF, derp_LOGG)\n",
+    "# plt.scatter(teffs, loggs)\n",
+    "plt.xlim(8500, 3000)\n",
+    "plt.ylim(5.5, -0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "style_main = dict(ls='none', marker='o', mew=0.6, ms=6., \n",
     "                  color='tab:blue', zorder=100, \n",
     "                  mec='gold')\n",
@@ -263,7 +272,7 @@
     "                       alpha=0.75, color='tab:orange', zorder=10)\n",
     "\n",
     "# for hood in neighborhoods[:20]:\n",
-    "for n in np.arange(0, len(neighborhoods), 4):\n",
+    "for n in np.arange(0, len(neighborhoods), 4)[:20]:\n",
     "    hood = neighborhoods[n]\n",
     "\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
@@ -271,16 +280,16 @@
     "    ax = axes[0]\n",
     "    bins = (np.linspace(3000, 8500, 128),\n",
     "            np.linspace(0, 5.5, 128))\n",
-    "    ax.hist2d(parent['TEFF'], parent['LOGG'],\n",
+    "    ax.hist2d(parent_data.stars['TEFF'], parent_data.stars['LOGG'],\n",
     "              bins=bins, norm=mpl.colors.LogNorm(),\n",
     "              cmap='Greys')\n",
     "\n",
-    "    ax.plot(good_stars['TEFF'][hood[0]],\n",
-    "            good_stars['LOGG'][hood[0]],\n",
+    "    ax.plot(neighbor_stars['TEFF'][hood[0]],\n",
+    "            neighbor_stars['LOGG'][hood[0]],\n",
     "            **style_main)\n",
     "\n",
-    "    ax.plot(good_stars['TEFF'][hood[1:]],\n",
-    "            good_stars['LOGG'][hood[1:]],\n",
+    "    ax.plot(neighbor_stars['TEFF'][hood[1:]],\n",
+    "            neighbor_stars['LOGG'][hood[1:]],\n",
     "            **style_neighbors)\n",
     "\n",
     "    ax.set_xlim(bins[0].max(), bins[0].min())\n",
@@ -303,21 +312,21 @@
     "    bins = (np.linspace(-0.5, 2, 128),\n",
     "            np.linspace(-6, 10, 128))\n",
     "\n",
-    "    dist_mask, = np.where((parent['GAIAEDR3_PARALLAX'] / parent['GAIAEDR3_PARALLAX_ERROR']) > 5)\n",
-    "    distmod = coord.Distance(parallax=parent['GAIAEDR3_PARALLAX'][dist_mask]*u.mas).distmod.value\n",
-    "    ax.hist2d((parent[color[0]] - parent[color[1]])[dist_mask], \n",
-    "              parent[mag][dist_mask] - distmod,\n",
+    "    dist_mask, = np.where((parent_data.stars['GAIAEDR3_PARALLAX'] / parent_data.stars['GAIAEDR3_PARALLAX_ERROR']) > 5)\n",
+    "    distmod = coord.Distance(parallax=parent_data.stars['GAIAEDR3_PARALLAX'][dist_mask]*u.mas).distmod.value\n",
+    "    ax.hist2d((parent_data.stars[color[0]] - parent_data.stars[color[1]])[dist_mask], \n",
+    "              parent_data.stars[mag][dist_mask] - distmod,\n",
     "              bins=bins, norm=mpl.colors.LogNorm(),\n",
     "              cmap='Greys')\n",
     "\n",
-    "    distmod = coord.Distance(parallax=good_stars['GAIAEDR3_PARALLAX']*u.mas, \n",
+    "    distmod = coord.Distance(parallax=neighbor_stars['GAIAEDR3_PARALLAX']*u.mas, \n",
     "                             allow_negative=True).distmod.value\n",
-    "    ax.plot((good_stars[color[0]] - good_stars[color[1]])[hood[0]],\n",
-    "            (good_stars[mag] - distmod)[hood[0]],\n",
+    "    ax.plot((neighbor_stars[color[0]] - neighbor_stars[color[1]])[hood[0]],\n",
+    "            (neighbor_stars[mag] - distmod)[hood[0]],\n",
     "            **style_main)\n",
     "\n",
-    "    ax.plot((good_stars[color[0]] - good_stars[color[1]])[hood[1:]],\n",
-    "            (good_stars[mag] - distmod)[hood[1:]],\n",
+    "    ax.plot((neighbor_stars[color[0]] - neighbor_stars[color[1]])[hood[1:]],\n",
+    "            (neighbor_stars[mag] - distmod)[hood[1:]],\n",
     "            **style_neighbors)\n",
     "\n",
     "    ax.set_xlim(bins[0].min(), bins[0].max())\n",
@@ -333,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate a feature matrix for the entire parent sample:"
+    "# Apply to the full parent sample"
    ]
   },
   {
@@ -342,7 +351,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xyivar, idx_map, spec_mask_vals = make_Xy(parent, lowpass=False)"
+    "parent_X, _, parent_stars = get_neighborhood_X(\n",
+    "    parent_data, spec_good_mask)\n",
+    "parent_X.shape"
    ]
   },
   {
@@ -351,7 +362,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py"
+    "parent_projected_X = np.zeros((parent_X.shape[0], projected_X.shape[1]),\n",
+    "                               dtype=np.float32)\n",
+    "parent_projected_X.shape"
    ]
   },
   {
@@ -360,17 +373,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(cache_path / f'parent-sample-data.hdf5', 'w') as f:\n",
-    "    f.create_dataset('X', data=Xyivar[0])\n",
-    "    f.create_dataset('y', data=Xyivar[1])\n",
-    "    f.create_dataset('y_ivar', data=Xyivar[2])\n",
-    "    f.create_dataset('spec_mask_vals', data=spec_mask_vals)\n",
+    "vals = np.linspace(0, parent_X.shape[0], 8).astype(int)\n",
+    "for i1, i2 in zip(vals[:-1], vals[1:]):\n",
+    "    if i2 >= parent_X.shape[0]-1:\n",
+    "        i2 = parent_X.shape[0]\n",
     "    \n",
-    "    g = f.create_group('idx_map')\n",
-    "    for key, idx in idx_map.items():\n",
-    "        g.create_dataset(key, data=idx)\n",
-    "        \n",
-    "    parent.write(f, path='stars', serialize_meta=False)"
+    "    print(i1, i2)\n",
+    "    parent_projected_X[i1:i2] = pca.transform(parent_X[i1:i2])\n",
+    "    parent_projected_X[i1:i2] /= pca.singular_values_"
    ]
   },
   {
@@ -379,9 +389,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File('/tmp/test.hdf5', 'w') as f:\n",
-    "    # parent.write(f, path='stars', serialize_meta=False)\n",
-    "    f.attrs['all_phot_names'] = ['GAIAEDR3_PHOT_G_MEAN_MAG', 'J',' w1mpro']"
+    "np.save(root_cache_path / 'parent_projected_X.npy', \n",
+    "        parent_projected_X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Cache parent_projected_X to be used to construct neighborhoods??"
    ]
   },
   {
@@ -390,9 +406,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File('/tmp/test.hdf5', 'r') as f:\n",
-    "    # parent.write(f, path='stars', serialize_meta=False)\n",
-    "    print(f.attrs['all_phot_names'])"
+    "from scipy.stats import binned_statistic_2d\n",
+    "from sklearn.manifold import TSNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsne = TSNE(n_components=1)\n",
+    "X_embedded = tsne.fit_transform(parent_projected_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_embedded.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = (np.linspace(3000, 8500, 128),\n",
+    "        np.linspace(0, 5.5, 128))\n",
+    "\n",
+    "stat = binned_statistic_2d(\n",
+    "    parent_stars['TEFF'], \n",
+    "    parent_stars['LOGG'], \n",
+    "    # values=parent_projected_X[:, 0],\n",
+    "    values=X_embedded[:, 0],\n",
+    "    bins=bins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "\n",
+    "ax.pcolormesh(\n",
+    "    stat.x_edge, stat.y_edge, \n",
+    "    stat.statistic.T,\n",
+    "    cmap='magma_r')\n",
+    "\n",
+    "ax.set_ylim(5.5, 0)\n",
+    "ax.set_xlim(8500, 3000)\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   },
   {
