--- a/notebooks/PCA-neighbors-training.ipynb
+++ b/notebooks/PCA-neighbors-training.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
+    "os.environ['JOAQUIN_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/projects/joaquin/cache\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=Warning) \n",
     "import pickle\n",
@@ -31,11 +32,10 @@
     "from sklearn.decomposition import IncrementalPCA\n",
     "from scipy.spatial import cKDTree\n",
     "\n",
-    "from joaquin import Joaquin\n",
     "from joaquin.data import JoaquinData\n",
-    "from joaquin.config import all_phot_names, dr\n",
-    "from joaquin.logger import logger\n",
-    "from joaquin.plot import simple_corner, phot_to_label"
+    "from joaquin.config import all_phot_names, root_cache_path\n",
+    "from joaquin.plot import simple_corner, phot_to_label\n",
+    "from joaquin.neighborhoods import get_neighborhood_X"
    ]
   },
   {
@@ -44,17 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
-    "cache_path.mkdir(exist_ok=True, parents=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent = at.Table.read(cache_path / 'parent-sample.fits')\n",
+    "parent = at.Table.read(root_cache_path / 'parent-sample.fits')\n",
     "\n",
     "parent_stars = parent[(parent['SNR'] > 100)]\n",
     "\n",
@@ -64,6 +54,42 @@
     "parent_stars = parent_stars[idx]\n",
     "\n",
     "len(parent_stars)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build the design matrix data for the full parent sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_data = JoaquinData(\n",
+    "    parent, lowpass=False, \n",
+    "    cache_file='parent-sample')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cache the good spectral features mask based on the full parent sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec_good_mask = parent_data._spec_mask_vals < 0.25\n",
+    "np.save(root_cache_path / 'spec_good_mask.npy', spec_good_mask)\n",
+    "spec_good_mask.sum()"
    ]
   },
   {
@@ -92,13 +118,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = JoaquinData(parent_stars, lowpass=False, \n",
-    "                   cache_path=cache_path)"
+    "## Build the design matrix data for the neighborhood subsample:"
    ]
   },
   {
@@ -107,27 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(X, *_), idx_map = data.get_Xy(['spec'], \n",
-    "                               spec_mask_thresh=1)\n",
-    "\n",
-    "# HACK: replace mags with colors\n",
-    "# X = np.hstack((X[:, idx_map['spec']],\n",
-    "#                X[:, idx_map['phot'][:-1]] - X[:, idx_map['phot'][1:]]))\n",
-    "# X = X[:, idx_map['phot'][:-1]] - X[:, idx_map['phot'][1:]]\n",
-    "\n",
-    "color_names = [\n",
-    "    ('GAIAEDR3_PHOT_BP_MEAN_MAG', 'J'),\n",
-    "    ('J', 'K'),\n",
-    "    ('J', 'w1mpro'),\n",
-    "    ('H', 'w2mpro'),\n",
-    "    ('w1mpro', 'w2mpro')\n",
-    "]\n",
-    "color_X = data.get_colors(color_names)\n",
-    "color_labels = [f'{x1}-{x2}' for x1, x2 in color_names]\n",
-    "X = np.hstack((X, color_X))\n",
-    "\n",
-    "good_stars = data.stars[data.stars_mask]\n",
-    "assert X.shape[0] == len(good_stars)"
+    "data = JoaquinData(\n",
+    "    parent_stars, lowpass=False, \n",
+    "    cache_file='neighborhood-sample')"
    ]
   },
   {
@@ -136,8 +141,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# _ = simple_corner(color_X, labels=color_labels, \n",
-    "#                   color_by=good_stars['LOGG'], vmin=0.5, vmax=5.5)"
+    "X, color_labels, good_stars = get_neighborhood_X(data, spec_good_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = X[:, -len(color_labels):]\n",
+    "_ = simple_corner(tmp, \n",
+    "                  labels=color_labels, \n",
+    "                  color_by=good_stars['LOGG'], vmin=0.5, vmax=5.5, \n",
+    "                  colorbar=True)"
    ]
   },
   {
@@ -248,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(cache_path / 'pca_neighborizer.pkl', 'wb') as f:\n",
+    "with open(root_cache_path / 'pca_neighborizer.pkl', 'wb') as f:\n",
     "    pickle.dump(pca, f)"
    ]
   },
