--- a/notebooks/Parent-sample-cleaning.ipynb
+++ b/notebooks/Parent-sample-cleaning.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "from gala.mpl_style import hesperia, laguna\n",
     "\n",
-    "from joaquin.config import phot_names, dr\n",
+    "from joaquin.config import all_phot_names, dr\n",
     "from joaquin.plot import simple_corner, phot_to_label"
    ]
   },
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "phot_mask = np.ones(len(stars), dtype=bool)\n",
-    "for name in phot_names:\n",
+    "for name in all_phot_names:\n",
     "    phot_mask &= (np.isfinite(stars[name]) & \n",
     "                  (stars[name] > 0) &\n",
     "                  (stars[name] < 22))  # MAGIC NUMBER\n",
