--- a/notebooks/PCA-neighbors-zoning.ipynb
+++ b/notebooks/PCA-neighbors-zoning.ipynb
@@ -89,12 +89,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "np.unique(all_indices).shape"
+    "What fraction of the parent sample stars end up in a neighborhood?"
    ]
   },
   {
@@ -103,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_projected_X.shape"
+    "np.unique(all_indices).shape[0] / parent_projected_X.shape[0]"
    ]
   },
   {
