how many stars get into zone1/2

--- a/notebooks/PCA-neighbors-zoning.ipynb
+++ b/notebooks/PCA-neighbors-zoning.ipynb
@@ -39,6 +39,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zone1_K = 2048\n",
+    "zone2_K = 8192"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -56,6 +66,17 @@
     "\n",
     "zones_X = np.load(\n",
     "    root_cache_path / 'neighborhoods_projected_X.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_data = JoaquinData(\n",
+    "    cache_file='parent-sample')\n",
+    "parent_stars = parent_data.stars[parent_data.stars_mask]"
    ]
   },
   {
@@ -82,17 +103,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_indices = []\n",
+    "zone_idx = []\n",
     "for i in range(zones_X.shape[0]):\n",
-    "    _, idx = tree.query(zones_X[i], k=8192)\n",
-    "    all_indices.append(idx)"
+    "    dist, idx = tree.query(zones_X[i], k=zone2_K)\n",
+    "    zone_idx.append(idx[dist.argsort()])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What fraction of the parent sample stars end up in a neighborhood?"
+    "### Plot HR diagram colored by zone"
    ]
   },
   {
@@ -101,7 +122,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.unique(all_indices).shape[0] / parent_projected_X.shape[0]"
+    "from scipy.stats import binned_statistic_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zone_idx_unq = []\n",
+    "for i, tmp in enumerate(zone_idx):\n",
+    "    if i > 0:\n",
+    "        zone_idx_unq.append(\n",
+    "            tmp[~np.isin(tmp, np.concatenate(zone_idx_unq[:i]))])\n",
+    "    else:\n",
+    "        zone_idx_unq.append(tmp)\n",
+    "        \n",
+    "colors = np.full(len(parent_stars), np.nan)\n",
+    "\n",
+    "derp = np.arange(len(zone_idx_unq))\n",
+    "np.random.seed(42)\n",
+    "np.random.shuffle(derp)\n",
+    "for i, tmp in zip(derp, zone_idx_unq):\n",
+    "    colors[tmp] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = np.isfinite(colors)\n",
+    "\n",
+    "bins = (np.linspace(3000, 8500, 256),\n",
+    "        np.linspace(0, 5.5, 256))\n",
+    "stat1 = binned_statistic_2d(\n",
+    "    parent_stars['TEFF'][mask], \n",
+    "    parent_stars['LOGG'][mask], \n",
+    "    values=colors[mask],\n",
+    "    bins=bins)\n",
+    "\n",
+    "bins = (np.linspace(3000, 8500, 256),\n",
+    "        np.linspace(-2.5, 0.5, 256))\n",
+    "stat2 = binned_statistic_2d(\n",
+    "    parent_stars['TEFF'][mask], \n",
+    "    parent_stars['M_H'][mask], \n",
+    "    values=colors[mask],\n",
+    "    bins=bins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "\n",
+    "for stat, ax in zip([stat1, stat2], axes):\n",
+    "    ax.pcolormesh(\n",
+    "        stat.x_edge, stat.y_edge, \n",
+    "        stat.statistic.T,\n",
+    "        cmap='Set2')\n",
+    "\n",
+    "axes[0].set_xlim(8500, 3000)\n",
+    "axes[0].set_ylim(5.5, 0)\n",
+    "\n",
+    "axes[1].set_xlim(8500, 3000)\n",
+    "axes[1].set_ylim(-2.5, 0.5)\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What fraction of the parent sample stars end up in a zone 1 vs zone 2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = []\n",
+    "for i in range(zones_X.shape[0]):\n",
+    "    _, idx = tree.query(zones_X[i], k=zone1_K)\n",
+    "    all_indices.append(idx)\n",
+    "    \n",
+    "tmp = np.unique(all_indices).shape[0] / parent_projected_X.shape[0]\n",
+    "print(f\"{tmp*100:.1f}% of stars end up in a zone 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = []\n",
+    "for i in range(zones_X.shape[0]):\n",
+    "    _, idx = tree.query(zones_X[i], k=zone2_K)\n",
+    "    all_indices.append(idx)\n",
+    "    \n",
+    "tmp = np.unique(all_indices).shape[0] / parent_projected_X.shape[0]\n",
+    "print(f\"{tmp*100:.1f}% of stars end up in a zone 2\")"
    ]
   },
   {
