--- a/notebooks/PCA-neighbors-zoning.ipynb
+++ b/notebooks/PCA-neighbors-zoning.ipynb
@@ -33,19 +33,9 @@
     "from scipy.spatial import cKDTree\n",
     "\n",
     "from joaquin.data import JoaquinData\n",
-    "from joaquin.config import root_cache_path\n",
+    "from joaquin.config import root_cache_path, zone1_K, zone2_K\n",
     "from joaquin.plot import simple_corner\n",
     "from joaquin.neighborhoods import get_neighborhood_X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zone1_K = 2048\n",
-    "zone2_K = 8192"
    ]
   },
   {
@@ -232,6 +222,13 @@
     "tmp = np.unique(all_indices).shape[0] / parent_projected_X.shape[0]\n",
     "print(f\"{tmp*100:.1f}% of stars end up in a zone 2\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
