--- a/notebooks/Prototyping.ipynb
+++ b/notebooks/Prototyping.ipynb
@@ -18,6 +18,10 @@
    "source": [
     "import os\n",
     "os.environ['APOGEE_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/apogee-test/\"\n",
+    "os.environ['JOAQUIN_CACHE_PATH'] = \"/mnt/ceph/users/apricewhelan/projects/joaquin/cache\"\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=Warning) \n",
+    "import pickle\n",
     "\n",
     "import sys\n",
     "import pathlib\n",
